# ai-cover-letter-generator

./: .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
agents/: openai_client.py
prompts/: cover_letter_prompts.py  job_listing_prompt.py
tests/: test_app_helpers.py  test_exports_and_prompts.py  test_fit_analysis.py  test_job_extraction.py  test_resume_parsing.py
utils/: utils.py
