[tool.poetry]
name = "cover-letter-generator"
version = "0.1.0"
description = "AI-powered Streamlit app for generating tailored cover letters from resumes and job descriptions."
authors = ["Aakanksha Bhondve"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
streamlit = "1.40.1"
python-dotenv = "1.0.1"
openai = "1.54.4"
langchain = "0.3.7"
langchain-core = "0.3.19"
langchain-community = "0.3.7"
langchain-openai = "0.2.8"
html2text = "2024.2.26"
playwright = "1.48.0"
pypdf = "5.1.0"
python-docx = "1.1.2"
reportlab = "4.2.5"
beautifulsoup4 = "4.12.3"
requests = "2.32.3"
urllib3 = "2.2.3"
charset-normalizer = "3.4.0"
chardet = "5.2.0"
trafilatura = "1.12.2"
httpx = "0.27.2"
watchdog = "5.0.3"
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
